--- a/spotify_exercise/nav.html
+++ b/spotify_exercise/nav.html
@@ -9,5 +9,8 @@
         <li>
             <a href="artists.php">Artists</a>
         </li>
+        <li>
+            <a href="register.php">Register</a>
+        </li>
     </ul>
 </nav>
